[metadata]
name = stevma
version = 0.0.1
author = Adolfo Simaz Bunzel
author_email = asimazbunzel@iar.unlp.edu.ar
licence = MIT
description = Manager of a mesh of stellar evolution models
logn_description = file: README.md
logn_description_content_type = text/markdown

[options.entry_points]
console_scripts =
   mesh-manager = stevma:main

[options]
python_requires = >=3.6
packages = find:
install_requires =
   pyyaml
